--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -62,7 +62,7 @@
 
     </div>
 
-    <h3>Clients</h3>   
+  <!--  <h3>Clients</h3>  --> 
       <img src="../img/technologyservices.jpg" style="margin:auto; width:320px;display:block" />
       <p style="text-align:justify">  <br>
          <b> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
@@ -72,7 +72,7 @@
 
     <div class="col-sm-3">
         <div class="c_box_item" style="text-align:center">
-      <h3> Partners</h3>  
+     <!-- <h3> Partners</h3>-->
       <img src="../img/partner2.png" style="margin:auto; width:430px;display:block" />
       <p style="text-align:justify">    <br>                             
       <b>There are three ways in making money with us; One is to use our Solutions as members do. 
@@ -83,7 +83,8 @@
     </div>
     <div class="col-sm-3" >       
         <div class="c_box_item" style="text-align:left">   
-           <div class="c_box_item" style="text-align:center"> <h3>Security </h3> </div>
+           <div class="c_box_item" style="text-align:center"> 
+          <!--<h3>Security </h3> </div>-->
       <img src="../img/CustomerService.jpg" style="margin:auto; width:320px;display:block" /> 
       <div class="col-sm-12 text-left" style="padding-top:0em;"></div>
                                     <ul style="list-style:dot">
