--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,37 +5,39 @@
     
         <title>About</title>
 
-            <link rel="stylesheet" href="/css/styles.css">  
-                        {{>header}}
-            <h2>
-               <style>
-                      h2 {
-                             position: absolute;
-                             left:1400px;
-                             top:1px
-                                
-                                }
-               </style>
-          </h2>
+            
+
            
     </head>
 
  <body>
 <head>
-    <title>Support</title>
+    
             <link rel="stylesheet" href="/css/styles.css">  
             <script src="../public/js/form.js"></script>
            <link rel="stylesheet" href="/css/form.css" > 
- 
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-        
 
-        <div class="main-content">
+
+                                {{>header}}
+            <h2>
+               <style>
+                      h2 {
+                             position: absolute;
+                             left:730px;
+                             top:1px
+                                
+                                }
+               </style>
+          </h2>
+</head> 
            
            
           <style>
@@ -52,9 +54,9 @@
                          
          <div class="row">
 
-            <div class="col-md-6 col-md-offset-3" id="form_container">
-        
-        <p>
+            <div class="col-md-4 col-md-offset-3" id="form_container">
+<br/>
+        <p> 
            <b> Check4digiPay </b> was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data 
            processing services for members, value added agents, financial institutions and independent sales organizations in 4 continents namely (North America, South America, 
            Europe and Asia) that allow them to cater their products and services to the US. <hr/>
@@ -130,7 +132,16 @@
                                            
           
        
-       {{>footer}}                        
+       {{>footer}}    
+
+
+         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+</body>                    
        
     </body>
 
