--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -54,7 +54,7 @@
                          
          <div class="row">
 
-            <div class="col-md-4 col-md-offset-3" id="form_container">
+            <div class="col-md-6 col-md-offset-3" id="form_container">
 <br/>
         <p> 
            <b> Check4digiPay </b> was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data 
@@ -86,7 +86,7 @@
                                 Top-notch security We employ top-tier technology to keep your info safe at all times. Plus, we're rated A by the 
                                 <a href="http://www.bbb.org/southern-nevada/business-reviews/check-cashing-protection-systems/check-2-pay-in-las-vegas-nv-90014647" target="_blank">Better Business Bureau.</a>
                             </p>
-        <img src="../img/SecurityBigdata.png" style="margin-left:30px;  width:750px;display:block" />
+        <img src="../img/securityBigdata.png" style="margin-left:30px;  width:750px;display:block" />
         <form role="form" method="post" id="reused_form"> <hr/>
 
             <div class="row">
