header bootstrap added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -51,7 +51,7 @@
                        
                       
            </style> 
-                         
+<div>                         
          <div class="row">
 
             <div class="col-md-8 col-md-offset-3" id="form_container">
@@ -84,9 +84,11 @@
                             <br />
                             <p>
                                 Top-notch security We employ top-tier technology to keep your info safe at all times. Plus, we're rated A by the 
-                                <a href="http://www.bbb.org/southern-nevada/business-reviews/check-cashing-protection-systems/check-2-pay-in-las-vegas-nv-90014647" target="_blank">Better Business Bureau.</a>
+
                             </p>
         <img src="../img/securityBigdata.png" style="margin-left:30px;  width:750px;display:block" />
+
+
         <form role="form" method="post" id="reused_form"> <hr/>
 
             <div class="row">
