--- a/templates/views/securitycenter.hbs
+++ b/templates/views/securitycenter.hbs
@@ -1,13 +1,14 @@
 <html lang="en">
 <head>
-    
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
     <title>HTML FlexBox -  Two percentage columns and one larger, left content</title>
     <!--<link rel="stylesheet" href="/css/styles.css">  
             <script src="../public/js/form.js"></script>
                            {{>header}} -->
        
             
-            <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
+    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">    
     <meta name="generator" content="HAPedit 3.1">
 
   <head/>  
@@ -111,7 +112,7 @@
 <div id="container">
    
     <div id="header">
-       <h1>Something You Should Know</h1>
+       <h1>Cyber Security You Should Know</h1>
         <a href="/" target="_blank">Go Back</a>
        
         
@@ -232,5 +233,14 @@ img {
     </div>
 </div>
 <script type="text/javascript">AddFillerLink("content", "navigation", "extra")</script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+
 </body>
 </html>
