add menu button

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     </head>
 
  <body>
-<head>
+ <head>
     
             <link rel="stylesheet" href="/css/styles.css">  
             <script src="../public/js/form.js"></script>
@@ -26,7 +26,29 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 
-                                {{>header}}
+<body>
+  <header>
+    <h1 class="display-3 text-center my-4">About Us</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 ">
+          <div class="dropdown">
+            <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-toggle="dropdown">
+              Menu
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="/MerchantRegisterForm">Sign Up </a>
+              <a class="dropdown-item" href="/Login">Login/Sign Up</a>
+              <a class="dropdown-item" href="/">Home page</a>
+              <a class="dropdown-item" href="2_5_colors_background.html">2.5: Colors & Background</a>
+              <a class="dropdown-item" href="2_6_spacing.html">2.6 Spacing</a>
+              <a class="dropdown-item" href="2_7_sizing.html">2.7 Sizing</a>
+              <a class="dropdown-item" href="2_8_breakpoints.html">2.8 Breakpoints</a>
+            </div>
+          </div>
+        </div>
+<!--
+                          {{>header}}
             <h2>
                <style>
                       h2 {
@@ -37,7 +59,7 @@
                                 }
                </style>
           </h2>
-</head> 
+</head> -->
            
            
           <style>
@@ -51,7 +73,7 @@
                        
                       
            </style> 
-<div>                         
+                         
          <div class="row">
 
             <div class="col-md-8 col-md-offset-3" id="form_container">
@@ -84,10 +106,9 @@
                             <br />
                             <p>
                                 Top-notch security We employ top-tier technology to keep your info safe at all times. Plus, we're rated A by the 
-
+                                <a href="http://www.bbb.org/southern-nevada/business-reviews/check-cashing-protection-systems/check-2-pay-in-las-vegas-nv-90014647" target="_blank">Better Business Bureau.</a>
                             </p>
         <img src="../img/securityBigdata.png" style="margin-left:30px;  width:750px;display:block" />
-
 
         <form role="form" method="post" id="reused_form"> <hr/>
 
