--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -60,37 +60,45 @@
                </style>
           </h2>
 </head> -->
-           
+
+
            
           <style>
               
 
                    body {
                        background-color: #79a6d2;
-                       background-image: url("../img/HB_UK_jet.png");                       
+                                           
                        background-repeat: no-repeat;
                        background-size: 100% 100%;
                        
                       
-           </style> 
-                         
-         <div class="row">
+           </style>
 
-            <div class="col-md-8 col-md-offset-3" id="form_container">
-<br/>
-        <p> 
-           <b> Check4digiPay </b> was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data 
-           processing services for members, value added agents, financial institutions and independent sales organizations in 4 continents namely (North America, South America, 
-           Europe and Asia) that allow them to cater their products and services to the US. <hr/>
-           Our lean but robust organization boasts of a proprietary, secure, state of the art data processing portal organically developed by our dynamic IT team, a full blown 
-           Risk Department, complete with seasoned Fraud and Prevention Specialists and a dedicated in house Customer Service Department focused on delivering total customer and 
-           member expectation fulfillment.
-        </p>
+     <div class="container">   
 
-          <hr />
-                            <p>
-                                Our lean but robust organization boasts of the following:
-                            </p>
+        <div>
+  <div>
+            
+<p>Check4digiPay was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data processing services for members,
+   value added agents, financial institutions and independent sales organizations in 4 continents namely (North America, South America, Europe and Asia) that allow them to cater their products and 
+   services to the US.</P>
+
+<p>Our lean but robust organization boasts of a proprietary, secure, state of the art data processing portal organically developed by our dynamic IT team, a full blown Risk Department, complete with seasoned Fraud and Prevention Specialists and a dedicated in house Customer Service Department focused on delivering total customer and member expectation fulfillment.</p>
+
+
+
+            </div>
+        </div>              
+
+                <!-- CARD WITH IMAGE -->
+        <div>
+            <img src="../img/securityBigdata.png" class="img-fluid" alt="Responsive image">
+            
+                <h4>Our lean but robust organization boasts of the following:</h4>
+        <div>
+                                
+                            
 
                             <div class="col-sm-12" style="padding-top:1em; padding-bottom:1em;">
                                 <ul style="list-style-type:circle;padding-left:2em;">
@@ -98,17 +106,25 @@
                                     <li><b>A competent Risk Department manned by seasoned Fraud and Prevention Specialists.</b></li>
                                     <li><b>A dedicated in house Customer Service Department focused on total customer satisfaction.</b></li>
                                 </ul>
-                            </div>
-                            <p>
-                                Through a firm commitment to our vision of being a one stop business solutions company, we have blossomed into one
-                                of the most trusted and reliable institutions in our industry.
-                            </p>
-                            <br />
-                            <p>
-                                Top-notch security We employ top-tier technology to keep your info safe at all times. Plus, we're rated A by the 
-                                <a href="http://www.bbb.org/southern-nevada/business-reviews/check-cashing-protection-systems/check-2-pay-in-las-vegas-nv-90014647" target="_blank">Better Business Bureau.</a>
-                            </p>
-        <img src="../img/securityBigdata.png" style="margin-left:30px;  width:750px;display:block" />
+                            </di>
+            <div>
+            <div>
+            Through a firm commitment to our vision of being a one stop business solutions company, we have blossomed into one of the most trusted and reliable institutions in our industry.
+            Top-notch security We employ top-tier technology to keep your info safe at all tim consectetur adipisicing elit. Delectus, voluptate.
+        <br>
+        <br>
+
+                <a href="/MerchantRegisterForm">Sign Up</a>
+            </div>
+        </div>
+
+        <br>
+        <br>
+                         
+         <div class="row">
+
+            <div class="col-md-8 col-md-offset-3" id="form_container">
+
 
         <form role="form" method="post" id="reused_form"> <hr/>
 
@@ -151,7 +167,7 @@
         </div>
     </div>
 </div>                   
-                                                                                
+</div>                                                                                
                                            
           
        
