email area about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -31,7 +31,7 @@
     <h1 class="display-3 text-center my-4">About Us</h1>
     <div class="container">
       <div class="row">
-        <div class="col-md-2 ">
+        <div class="col-md-3 ">
           <div class="dropdown">
             <button class="btn btn-primary btn-block dropdown-toggle" type="button" data-toggle="dropdown">
               Menu
@@ -40,10 +40,10 @@
               <a class="dropdown-item" href="/MerchantRegisterForm">Sign Up </a>
               <a class="dropdown-item" href="/Login">Login/Sign Up</a>
               <a class="dropdown-item" href="/">Home page</a>
-              <a class="dropdown-item" href="2_5_colors_background.html">2.5: Colors & Background</a>
-              <a class="dropdown-item" href="2_6_spacing.html">2.6 Spacing</a>
-              <a class="dropdown-item" href="2_7_sizing.html">2.7 Sizing</a>
-              <a class="dropdown-item" href="2_8_breakpoints.html">2.8 Breakpoints</a>
+              <a class="dropdown-item" href="/securitycenter">Security Center</a>
+              <a class="dropdown-item" href="/clients">Clients</a>
+              <a class="dropdown-item" href="/partners">Partners</a>
+              <a class="dropdown-item" href="/help">Support</a>
             </div>
           </div>
         </div>
@@ -76,24 +76,24 @@
            </style>
 
      <div class="container">   
-
-        <div>
+      <div class="row"
+      <div class="col"
+<div>
   <div>
             
 <p>Check4digiPay was established in 2019. Combining industry expertise, we have progressed to be a leading provider of technology driven (enabled), efficient data processing services for members,
    value added agents, financial institutions and independent sales organizations in 4 continents namely (North America, South America, Europe and Asia) that allow them to cater their products and 
    services to the US.</P>
-
 <p>Our lean but robust organization boasts of a proprietary, secure, state of the art data processing portal organically developed by our dynamic IT team, a full blown Risk Department, complete with seasoned Fraud and Prevention Specialists and a dedicated in house Customer Service Department focused on delivering total customer and member expectation fulfillment.</p>
 
 
 
-            </div>
-        </div>              
+    </div>
+</div>              
 
                 <!-- CARD WITH IMAGE -->
         <div>
-            <img src="../img/securityBigdata.png" class="img-fluid" alt="Responsive image">
+            <img src="../img/securityBigdata.png"  alt="">
             
                 <h4>Our lean but robust organization boasts of the following:</h4>
         <div>
@@ -124,12 +124,13 @@
          <div class="row">
 
             <div class="col-md-8 col-md-offset-3" id="form_container">
-
+             E-mail us ! We will get back to you at the earliest!
 
         <form role="form" method="post" id="reused_form"> <hr/>
 
             <div class="row">
                 <div class="col-sm-12 form-group">
+
                     <label for="message">
                         Message:</label>
                     <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
@@ -137,7 +138,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-6 form-group">
-                    <label for="name">
+                    <label for="name"> 
                         Your Name:</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                 </div>
@@ -171,7 +172,7 @@
                                            
           
        
-       {{>footer}}    
+          
 
 
          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -180,11 +181,15 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-</body>                    
+
+
+
+
+{{>footer}}                     
        
     </body>
 
     
-        
+
 
 </html>
