login Header removed

--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -26,7 +26,7 @@
                        
                       
            </style> 
-                                 {{>header}}
+<!--{{>header}} -->
                                  
 <body>
     <form name="ctl01" method="post" action="Login.aspx" id="ctl01">
