--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,7 +16,7 @@
                       h2 {  
                                                        
                              position: absolute;
-                             left:1150px;
+                             left:650px;
                              top:10px
                                 
                                 }
@@ -40,37 +40,35 @@
  <style>
             body  {
                    
-                   background-image: url("/img/ePayBankBlue3.png");
                    background-color: #cccccc;
                    background-repeat: no-repeat;
                    background-size:  100% 95%;
                   }
          </style> 
-<!--<div class="jumbotron text-center">
-  <h2>My First Bootstrap Page</h2>
-  <p>Resize this responsive page to see the effect!Lorem ipsum dolor sit amet, consectetur adipisicing elit...
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p> 
-</div> -->
+<div class="jumbotron text-center">
+  <h2></h2>
+  <p></p> 
+            <img src="../img/vpn-net6.png" class="img-fluid" alt="Responsive image">
+</div> 
  <section class="creative_feature_area">
-    <div class="container-fluid", style="margin-top:850px">
+    <div class="container-fluid", style="margin-top:auto">
     <div class="c_feature_box">
         <div class="col-sm-12">
-  <div class="row">
-    <div class="col-sm-3" style="text-align:center">
-       
-        <div class="c_box_item" style="text-align:center">
-
+<!--#####################################################-->
+<div class="row">
+    <div class="col-sm-2" style="text-align:center">
+          <div class="c_box_item" style="text-align:center">
     </div>
 
   <!--  <h3>Clients</h3>  --> 
-      <img src="../img/technologyservices.jpg" style="margin:auto; width:320px;display:block" />
+      <img src="../img/technologyservices.jpg" style="margin:auto; width:430px;display:block" />
       <p style="text-align:justify">  <br>
          <b> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
           with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a></b>
      </p> 
     </div>
-
-    <div class="col-sm-3">
+<!--##########################################################-->
+    <div class="col-sm-2">
         <div class="c_box_item" style="text-align:center">
      <!-- <h3> Partners</h3>-->
       <img src="../img/partner2.png" style="margin:auto; width:430px;display:block" />
@@ -78,14 +76,13 @@
       <b>There are three ways in making money with us; One is to use our Solutions as members do. 
       Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b> 
       </p>
-      </p>
-     </div>
     </div>
-    <div class="col-sm-3" >       
+    </div>
+    <div class="col-sm-2" >       
         <div class="c_box_item" style="text-align:left">   
-           <div class="c_box_item" style="text-align:center"> 
+         <!--  <div class="c_box_item" style="text-align:center"> -->
           <!--<h3>Security </h3> </div>-->
-      <img src="../img/CustomerService.jpg" style="margin:auto; width:320px;display:block" /> 
+      <img src="../img/CustomerService.jpg" style="margin:auto; width:430px;display:block" /> 
       <div class="col-sm-12 text-left" style="padding-top:0em;"></div>
                                     <ul style="list-style:dot">
                                         <li>Increased Sales</li>
