--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,7 +16,7 @@
                       h2 {  
                                                        
                              position: absolute;
-                             left:650px;
+                             left:450px;
                              top:10px
                                 
                                 }
@@ -30,6 +30,8 @@
   <title>ChecksDigit</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -39,49 +41,72 @@
 <body>
  <style>
             body  {
-                   
+                   background-image: url("../img/vpn-net6.png");                       
                    background-color: #cccccc;
                    background-repeat: no-repeat;
                    background-size:  100% 95%;
                   }
          </style> 
 <div class="jumbotron text-center">
-  <h2></h2>
-  <p></p> 
-            <img src="../img/vpn-net6.png" class="img-fluid" alt="Responsive image">
+  <h2></h2> 
+  <p>1-800-888-8888</p> 
 </div> 
- <section class="creative_feature_area">
+
+
+ <section class="play creative_feature_area">
     <div class="container-fluid", style="margin-top:auto">
-    <div class="c_feature_box">
-        <div class="col-sm-12">
+    
 <!--#####################################################-->
 <div class="row">
-    <div class="col-sm-2" style="text-align:center">
-          <div class="c_box_item" style="text-align:center">
-    </div>
+    <div class="col-sm-6" style="text-align:center">
+         
+           
+            <div class="card-deck">
+ 
+            <div class="card" style="width:400px">
+    
 
   <!--  <h3>Clients</h3>  --> 
-      <img src="../img/technologyservices.jpg" style="margin:auto; width:430px;display:block" />
+      <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Benifit" style="width:100% />
+      <div class="card bg-primary text-white">
+        <div class="card-body">Primary card</div>
       <p style="text-align:justify">  <br>
          <b> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
           with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a></b>
      </p> 
     </div>
-<!--##########################################################-->
-    <div class="col-sm-2">
-        <div class="c_box_item" style="text-align:center">
-     <!-- <h3> Partners</h3>-->
+    
+<!--##############################Partners############################-->
+ <div class="card">
+    <img class="card-img-top" src="../img/partner2.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text"><b>There are three ways in making money with us; One is to use our Solutions as members do. 
+      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b>.
+      </p>
+     </div>
+     </div>
+   <!-- <div class="col-sm-2">
+             <div class="c_box_item" style="text-align:center">
+      <h3> Partners</h3>
       <img src="../img/partner2.png" style="margin:auto; width:430px;display:block" />
       <p style="text-align:justify">    <br>                             
       <b>There are three ways in making money with us; One is to use our Solutions as members do. 
       Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b> 
       </p>
     </div>
-    </div>
-    <div class="col-sm-2" >       
+    </div>-->
+
+<div class="card">
+    <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+
+  <!--  <div class="col-sm-2" >       
         <div class="c_box_item" style="text-align:left">   
          <!--  <div class="c_box_item" style="text-align:center"> -->
-          <!--<h3>Security </h3> </div>-->
+          <!--<h3>Security </h3> </div>
       <img src="../img/CustomerService.jpg" style="margin:auto; width:430px;display:block" /> 
       <div class="col-sm-12 text-left" style="padding-top:0em;"></div>
                                     <ul style="list-style:dot">
@@ -97,7 +122,7 @@
     </div>
   </div>
 </div>
-</div>
+</div>-->
 </div>
 </section> 
 </body>
