nav bar link shift to left, and PNG to png

--- a/templates/views/MerchantRegisterForm.hbs
+++ b/templates/views/MerchantRegisterForm.hbs
@@ -20,7 +20,7 @@
                                   body {
                                       margin-top: 0px;
                        background-color: #79a6d2; 
-                       background-image: url("../img/DSC_1059.PNG");                          
+                       background-image: url("../img/DSC_1059.png");                          
                        background-repeat: no-repeat;
                        background-size: 100% 100%;  
                        </style> 
@@ -33,7 +33,7 @@
 
                       h2 {   
                              position: absolute;
-                             left:500px;
+                             left:400px;
                              top:15px
                                 
                                 }
