--- a/templates/views/MerchantRegisterForm.hbs
+++ b/templates/views/MerchantRegisterForm.hbs
@@ -106,7 +106,7 @@ function __doPostBack(eventTarget, eventArgument) {
     </div>
     <div class="form-group col-md-6">
       <label for = "inputSuiteNo">Suite Number</label> 
-      <input type="text" class="form-control" id="inputSuiteNo"  placeholder="Last name">
+      <input type="text" class="form-control" id="inputSuiteNo"  placeholder="#12 A">
     </div>
      <div class="form-group col-md-12">
     <label for="inputStreetName">Address</label>
