class = card-deck position

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -61,26 +61,29 @@
     <div class="col-sm-6" style="text-align:center">
          
            
-            <div class="card-deck">
- 
-            <div class="card" style="width:400px">
-    
-
-  <!--  <h3>Clients</h3>  --> 
-      <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Benifit" style="width:100% />
-      <div class="card bg-primary text-white">
-        <div class="card-body">Primary card</div>
+            <div class="card-deck"> 
+              <div class="card" style="width:400px"> 
+             <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Card image Cap">
+              <div class="card-body"  "text-center">
+              <h5 class="card-title">Card title</h5>
+              <div class="card bg-primary text-white"></div>
+             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             </div>
+             </div>  
+      
+   <!--   <div class="card bg-primary text-white">
+        <div class="card-body"><b>EZ Data Solutions</b></div>
       <p style="text-align:justify">  <br>
          <b> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
           with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a></b>
      </p> 
-    </div>
+    </div> -->
     
 <!--##############################Partners############################-->
  <div class="card">
     <img class="card-img-top" src="../img/partner2.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title"><b>3 Ways to Make Money</b></h5>
       <p class="card-text"><b>There are three ways in making money with us; One is to use our Solutions as members do. 
       Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b>.
       </p>
@@ -100,8 +103,8 @@
 <div class="card">
     <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title"><b>Compliance</h5></b>
+      <p class="card-text"><b>Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </b></p>
 
   <!--  <div class="col-sm-2" >       
         <div class="c_box_item" style="text-align:left">   
