modified index replace image

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -56,56 +56,44 @@
  <section class="play creative_feature_area">
     <div class="container-fluid", style="margin-top:auto">
     
-<!--#####################################################-->
 <div class="row">
-    <div class="col-sm-6" style="text-align:center">
+    <div class="col-sm-6" style="text-align:left">
          
-           
+    <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
-              <div class="card" style="width:400px"> 
+              <div class="card" > 
              <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Card image Cap">
-              <div class="card-body"  "text-center">
-              <h5 class="card-title">Card title</h5>
+              <div class="card-body"  "tex-left">
+              <h5 class="card-title"><b>EZ Data Solutions</b></h5>
               <div class="card bg-primary text-white"></div>
-             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+             <p class="card-text"> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
+          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a>
+     </p> <hr>
              </div>
              </div>  
-      
-   <!--   <div class="card bg-primary text-white">
-        <div class="card-body"><b>EZ Data Solutions</b></div>
-      <p style="text-align:justify">  <br>
-         <b> ChecksDigit Members Account Program and Data Processing Solutions are easy to use and 
-          with the most advanced technology, are enough to handle the needs of your business. <a class="more_btn" href="../clients">Get Start</a></b>
-     </p> 
-    </div> -->
+         
     
 <!--##############################Partners############################-->
  <div class="card">
-    <img class="card-img-top" src="../img/partner2.png" alt="Card image cap">
+    <img class="card-img-top" src="../img/meeting.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title"><b>3 Ways to Make Money</b></h5>
-      <p class="card-text"><b>There are three ways in making money with us; One is to use our Solutions as members do. 
-      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b>.
-      </p>
+      <div class="card bg-primary text-white"></div>
+      <p class="card-text">There are three ways in making money with us; One is to use our Solutions as members do. 
+      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a>.
+      </p> <hr>
      </div>
      </div>
-   <!-- <div class="col-sm-2">
-             <div class="c_box_item" style="text-align:center">
-      <h3> Partners</h3>
-      <img src="../img/partner2.png" style="margin:auto; width:430px;display:block" />
-      <p style="text-align:justify">    <br>                             
-      <b>There are three ways in making money with us; One is to use our Solutions as members do. 
-      Two is to become a Partner.Three is as an Aggregator utilizing our secure payment portal. <a class="more_btn" href="../partners">Get Start</a></b> 
-      </p>
-    </div>
-    </div>-->
-
+  <!--############################ Compliance ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title"><b>Compliance</h5></b>
-      <p class="card-text"><b>Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </b></p>
-
+      <div class="card bg-primary text-white"></div>
+      <p class="card-text">Our Compliance System is divided into three action levels: Prevent, Detect, and Respond. <a class="more_btn" href="../securitycenter">Learn More</a> </p>
+      <hr>
+</div>
+</div>
   <!--  <div class="col-sm-2" >       
         <div class="c_box_item" style="text-align:left">   
          <!--  <div class="c_box_item" style="text-align:center"> -->
