--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -6,13 +6,23 @@
 
            <title>Partners</title>
            <link rel="stylesheet" href="/css/styles.css">  
-           <script>src="/js/app.js"</script>
-    </head>
+           <script>src="/js/app.js"</script>                    
+            
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+                               
 
     <body>
            
-            <div class="main-content">
-
               <style>
                         
 
@@ -21,26 +31,28 @@
                        background-image: url("../img/thunderbirds.png");                       
                        background-repeat: no-repeat;
                        background-size: 100% 100%;
+
+                       
                        
                       
            </style> 
                             {{>header}}
-    
-               
-               
-             <!DOCTYPE html>
 
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <style>
+                      h2 {
+                             position: absolute;
+                             left:400px;
+                             top:15px
+                                
+                                }
+               </style>
+          </h2>  </div>
+
+
+
+ </body>
  
+<!--+++++++++++++++++++++++  header++++++++++++++++++++++++++++++++++++++++++++-->
 
 <div class="container-fluid">
     
@@ -153,13 +165,21 @@
   </div>
 </div>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
 
+
+                     {{>footer}}
 </body>
 </html>
 
             
             
-           {{>footer}}
+           
 
     </body>
 
