--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -51,8 +51,8 @@
 
 
  </body>
- 
-<!--+++++++++++++++++++++++  header++++++++++++++++++++++++++++++++++++++++++++-->
+
+<!--+++++++++++++++++++++++  header  ++++++++++++++++++++++++++++++++++++++++++++-->
 
 <div class="container-fluid">
     
@@ -63,8 +63,10 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-8 bg-warning">
-                                                        <img src="../img/ePayBankDigi.png" style= "width:550px" /> 
+    <div class="col-8 bg-info">
+        
+        
+                                                       
         <h4>There are <span class="text-primary"><b><i>Three (3) ways</i></b></span> of making money with us:</h4>
         <ul class="list-group">
         <li class="list-group-item"><span class="text-primary"><b><i>One</i></b></span> is to use our <span class="text-danger"><b><i>Solutions</i></b></span> as our members do.</li>
@@ -74,14 +76,58 @@
         as well as everything else that an Agent needs to know. </p> 
       <p><h5>Training and promotional programs will be discussed to explain our individual roles and how we can synergistically work together., </p> </h5>
         
-       <p><h5><br/>Our representativesare capable of addressing your ever growing business needs.</h5> </p> <hr/>  
+ 
 
              
+<div class="card-deck">
+    <div class="card">
+           <img class="card-img-top img-fluid" src="../img/onlinetrain.png" alt="Card image cap">
+            <div class="card-body">
+            
+            <h5 class="card-title">Training and promotional programs</h5> 
 
+      <p class="card-text">Our representativesare capable of addressing your ever growing business needs.</p>
+      <p class="card-text"><small class="text-muted">Please call us 1800-888-8888</small></p>
+      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="../img/ePayBankDigi.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">A Partners Account enables you to:</h5>
+      <p class="card-text">We offer Partners Account and other account services xfor all businesses including retail, wholesale, internet, mail order, phone order, and etc...</p>
+      <ul style="list-style:dot; padding-left:1rem;">
+                                                            <li>Debit your customers' checking accounts.</li>
+                                                            <li>Accept payments by phone (MOTO), online, (API) or in person (Virtual Terminal).</li>
+                                                            <li>Set up recurring billing to automatically debit customers' checking accounts.</li>
+                                                        </ul>
+                                                        <hr>
+      <p class="card-text"><small class="text-muted">1-800-888-8888</small></p>
+      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+    </div>
+  </div>
+ 
+ <div class="card">
+    <img class="card-img-top" src="../img/ePayBankDigi.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">2 Ways To Input Transactions:</h5>
+      <p class="card-text">Just simply fill out our online application and one of our customer representatives will contact you as soon as possible.</p>
+      <ul style="list-style:dot; padding-left:1rem;">
+                                                            <li>Virtual Terminal</li>
+                                                            <li>Application Program Interface (API).</li>
+                                                        </ul> 
+                                                        <hr>
+      <p class="card-text"><small class="text-muted">1-800-888-8888</small></p>
+      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+    </div>
+  </div>
+ </div>
+ 
+     
     
-       <img src="../img/onlinetrain.png" style="margin-left:680px;  width:450px;display:block" /> 
-          
-      <div class="row">
+
+   <!--   <div class="row">
         <div class="col-6  ">
             
             <h4><b>What is Partners Account?</b></h4>
@@ -119,17 +165,18 @@
                                             
         <div class="col-6 bg-secondary">
          <div  class="p-3 mb-2 bg-white text-dark">
-            <div class="card"> </div> 
-           <p>  <img src="../img/call.png" style="margin-left:80px;  width:350px;display:block" /> 
+            <div class="card"> </div> -->
+           <p>  <img src="../img/call.png" style="margin-left:480px;  width:350px;display:block" /> 
            
              
        Sign Up Today ! Just simply fill out our online application and one of our customer representatives will contact you as soon as possible.
        
          </p>  
        </div>
-      </div>
-      </div>
-    <!--......................................................................................-->
+      
+      
+
+    <!--...................................................right side section...................................-->
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;">
                                                 <div class="col-sm-10">
