--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -87,7 +87,7 @@
             <h5 class="card-title">Training and promotional programs</h5> 
 
       <p class="card-text">Our representativesare capable of addressing your ever growing business needs.</p>
-      <p class="card-text"><small class="text-muted">Please call us 1800-888-8888</small></p>
+      <p class="card-text"><small class="text-muted">Please call us 1800-888-8888</small></p> <hr>
       <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
     </div>
   </div>
@@ -109,7 +109,7 @@
   </div>
  
  <div class="card">
-    <img class="card-img-top" src="../img/ePayBankDigi.png" alt="Card image cap">
+    <img class="card-img-top" src="../img/Dataimage.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">2 Ways To Input Transactions:</h5>
       <p class="card-text">Just simply fill out our online application and one of our customer representatives will contact you as soon as possible.</p>
