--- a/templates/views/partners.hbs
+++ b/templates/views/partners.hbs
@@ -88,7 +88,7 @@
 
       <p class="card-text">Our representativesare capable of addressing your ever growing business needs.</p>
       <p class="card-text"><small class="text-muted">Please call us 1800-888-8888</small></p> <hr>
-      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+      <a href="/Login" class="btn btn-primary stretched-link">Sign Up Today !</a>
     </div>
   </div>
 
@@ -104,7 +104,7 @@
                                                         </ul>
                                                         <hr>
       <p class="card-text"><small class="text-muted">1-800-888-8888</small></p>
-      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+      <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
     </div>
   </div>
  
@@ -119,7 +119,7 @@
                                                         </ul> 
                                                         <hr>
       <p class="card-text"><small class="text-muted">1-800-888-8888</small></p>
-      <a href="#" class="btn btn-primary stretched-link">Sign Up Today !</a>
+      <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
     </div>
   </div>
  </div>
