--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -116,7 +116,7 @@
        </div>
       </div>
       </div>
-    <!--......................................................................................-->
+    <!--.....................................................................Green zone .................-->
    
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;"> 
