--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -91,7 +91,7 @@
     </div>
 </div>              
 
-                <!-- CARD WITH IMAGE -->
+               
         <div>
             <img src="../img/securityBigdata.png"  alt="">
             
@@ -114,7 +114,7 @@
         <br>
         <br>
 
-                <a href="/MerchantRegisterForm">Sign Up</a>
+                <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a>
             </div>
         </div>
 
@@ -175,7 +175,7 @@
           
 
 
-         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
