background image size auto

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,9 +3,7 @@
 <html>
     <head>
     
-        <title>About</title>
-
-            
+        <title>About</title>            
 
            
     </head>
@@ -25,7 +23,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-
+<!--++++++++++++++++++++++ Drop Down menu bar++++++++++++++++++-->
 <body>
   <header>
     <h1 class="display-3 text-center my-4">About Us</h1>
@@ -47,21 +45,6 @@
             </div>
           </div>
         </div>
-<!--
-                          {{>header}}
-            <h2>
-               <style>
-                      h2 {
-                             position: absolute;
-                             left:730px;
-                             top:1px
-                                
-                                }
-               </style>
-          </h2>
-</head> -->
-
-
            
           <style>
               
@@ -70,7 +53,7 @@
                        background-color: #79a6d2;
                                            
                        background-repeat: no-repeat;
-                       background-size: 100% 100%;
+                       background-size: 100% auto;
                        
                       
            </style>
@@ -181,6 +164,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+
 
 
 
