--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -44,7 +44,7 @@
                    background-image: url("../img/vpn-net6.png");                       
                    background-color: #cccccc;
                    background-repeat: no-repeat;
-                   background-size:  100% 95%;
+                   background-size:  100% auto;
                   }
          </style> 
 <div class="jumbotron text-center">
