--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -49,7 +49,7 @@
          </style> 
 <div class="jumbotron text-center">
   <h2></h2> 
-  <p>1-800-888-8888</p> 
+  <p>1-800-888-8888  <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
 </div> 
 
 
@@ -61,6 +61,7 @@
          
     <!--####################### Card Deck ##############################-->       
             <div class="card-deck"> 
+              <!--=======================Solutions card===============-->
               <div class="card" > 
              <img class ="card-img-top" src="../img/technologyservices.jpg" alt ="Card image Cap">
               <div class="card-body"  "tex-left">
@@ -73,7 +74,7 @@
              </div>  
          
     
-<!--##############################Partners############################-->
+<!--##############################Partners card ############################-->
  <div class="card">
     <img class="card-img-top" src="../img/meeting.png" alt="Card image cap">
     <div class="card-body">
@@ -84,7 +85,7 @@
       </p> <hr>
      </div>
      </div>
-  <!--############################ Compliance ##################################-->
+  <!--############################ Compliance card ##################################-->
 <div class="card">
     <img class="card-img-top" src="../img/CustomerService.jpg" alt="Card image cap">
     <div class="card-body">
