--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -49,7 +49,8 @@
          </style> 
 <div class="jumbotron text-center">
   <h2></h2> 
-  <p>1-800-888-8888  <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
+  <p>1-800-888-8888</p>
+  <P> <a href="/MerchantRegisterForm" class="btn btn-primary stretched-link">Sign Up Today !</a></p> 
 </div> 
 
 
