--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -59,35 +59,37 @@
  </body>
 
 
-<!--####################################################-->
+<!--################################## Column Nest ##################-->
 
 
 <div class="container-fluid">
   <h2></h2>
   <p><h4><b><i>Clients Account</i></b></h4></p>
 </div>
-
+<!--+++++++++++++++++++++++++++++++++++++++Col-8 ++++++++++++++++++++++-->
 <div class="container-fluid">
   <div class="row">
     <div class="col-8 bg-info">
        
- 
-
-        <p>
-        </p> 
+         <p>   </p> 
       <hr/>    
-            
+ <!--++++++++++++++++++++++++++++++++++++++++col-4++++++++++++++++++++++-->           
       <div class="row">
         <div class="col-4 bg-light" align="center">
           
-          <h4><b>What is Client Account ?</b></h4></div>
+          <h4><b>What is Client Account ?</b></h4>
          <hr />
-                                            </div>
-                                            <div class="row" style="margin-bottom:1em;">
-                                                <div class="col-sm-7">
-                                                    <p>
-                                                        <b><i>A Client Account enables you to:</i></b>
-                                                        <br /><br />
+        </div>
+        </div>
+ <!--+++++++++++++++++++++++++++++++++++++col-sm-7++++++++++++++++++++++-->
+                    <div class="row" style="margin-bottom:1em;">
+                        <div class="col-sm-7">
+                                       <p>
+                                            <b>
+                                                 <i>A Client Account enables you to:</i>
+                                            </b>
+                                            
+                                                 <br /><br />
                                                         <ul style="list-style:dot; padding-left:1rem;">
                                                             <li>Debit your customers' checking accounts.</li>
                                                             <li>Accept payments by phone (MOTO), online, (API) or in person (Virtual Terminal).</li>
@@ -95,8 +97,10 @@
                                                         </ul>
                                                     </p>
                                                 </div>
+                                                
+                                                
                                                
-                                                <div class="col-sm-5">
+                                                <div class="col-sm-7">
                                                     <p>
                                                         <b><i>2 Ways To Input Transactions:</i></b>
                                                         <br /><br />
@@ -106,8 +110,9 @@
                                                         </ul>
                                                     </p>
                                                 </div>
-                                            </div>
-        <div class="col-6 bg-secondary">
+                                             </div>
+  <!--*********************************************************** Nested *********************************************-->
+        <div class="col-6 bg-light">
          <div  class="p-3 mb-2  "> 
          <p> 
            EZ-Data Clients Account programs and Data Processing solutions are simple and easy to use. <br/>Utilizing the most advanced technology,
@@ -116,7 +121,7 @@
        </div>
       </div>
       </div>
-    <!--.....................................................................Green zone .................-->
+    <!--.....................................................................Green zone .......................-->
    
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;"> 
@@ -125,16 +130,15 @@
                                        
                                         <div class="card">
                                             <img  src="../img/CustomerServiceDiv.png" class="card-img-top" alt="Card Image Cap"/>
-                                            <div class="card-body">
-                                                <div class="">
-                                                    <p>
+                                            <div class="card-body text-center" >
+                                                
+                                                  <p class="card-text">
                                                         <i>Its easy to be approved!</span>
                                                     Simply fill out our online application and one of our customer representatives will contact you as soon as possible.</i>
                                                     </p>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
+                                     
                                                 <div class="col-sm-12">
                                                     <p>
                                                         <b><i>Requirements:</i></b>
@@ -152,9 +156,11 @@
     
   </div>
 </div>
+</div>
+</div>
 
-</body>
-</html>
+
+
 
             
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
