--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -75,10 +75,11 @@
       <hr/>    
  <!--++++++++++++++++++++++++++++++++++++++++col-4++++++++++++++++++++++-->           
       <div class="row">
-        <div class="col-4 bg-light" align="center">
+        <div class="col-4 bg-transparent" align="center">
           
           <h4><b>What is Client Account ?</b></h4>
          <hr />
+    <!--     <img src="../img/StopFroud.png"  alt="..." class="img-thumbnail" > -->
         </div>
         </div>
  <!--+++++++++++++++++++++++++++++++++++++col-sm-7++++++++++++++++++++++-->
@@ -112,8 +113,8 @@
                                                 </div>
                                              </div>
   <!--*********************************************************** Nested *********************************************-->
-        <div class="col-6 bg-light">
-         <div  class="p-3 mb-2  "> 
+        <div class="col-6 bg-light border rounded border-dark">
+         <div  class="p-3 mb-2"> 
          <p> 
            EZ-Data Clients Account programs and Data Processing solutions are simple and easy to use. <br/>Utilizing the most advanced technology,
            they are capable of addressing your ever growing business needs. We offer Clients Account and other account services xfor all businesses including retail, wholesale, internet, mail order, phone order, and etc...
@@ -125,12 +126,13 @@
    
     <div class="col-4 bg-success">
       <div class="row" style="margin-top:1em;"> 
-         <div class="col-sm-10">
-              <div  class="col-xs-12 col-sm-10" style="margin-bottom:1em;">
+         <div class="col-sm-10 " >
+              <div  class="col-xs-12 col-sm-12 " style="margin-bottom:1em;" >
                                        
                                         <div class="card">
-                                            <img  src="../img/CustomerServiceDiv.png" class="card-img-top" alt="Card Image Cap"/>
-                                            <div class="card-body text-center" >
+                                       <div  class="card-title text-center""> <b>1800-888-8888</b>
+                                            <img  src="../img/CustomerServiceDiv.png" class="card-img-top" alt="Card Image Cap">
+                                            <div class="card-body text-left" >
                                                 
                                                   <p class="card-text">
                                                         <i>Its easy to be approved!</span>
