--- a/templates/views/Login.hbs
+++ b/templates/views/Login.hbs
@@ -2,7 +2,8 @@
 <head> 
 
  <meta charset="utf-8">    
-           <head><meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">    
+           
+               <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">    
   
             <link rel="stylesheet" href="/css/styles.css">  
             <script src="../public/js/form.js"></script>
