--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 
-<html>
-    <head>
+<html lang="en">
+ <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit=no">   
     
-<title>About</title>            
-<nav class="navbar fixed-top navbar-expand-sm bg-dark navbar-dark justify-content-end">
+    <link rel="stylesheet" href="/css/styles.css">  
+    <script src="../public/js/form.js"></script>
+    <link rel="stylesheet" href="/css/form.css" > 
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+
+  
+ <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    
+  <!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+      
+  <title>About</title>  
+
+</head>
+
+<body>
+<header>
+
+<nav class="navbar fixed-top navbar-expand-xl bg-dark navbar-dark justify-content-end ">
     <a class="navbar-brand" href="/">Home</a>
     <a href="/MerchantRegisterForm"> <button class="btn btn-success ml-auto mr-1" >Sign Up</button> </a> 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -29,26 +52,11 @@
     </div>
 </nav>
            
-    </head>
-
- <body>
- <head>
     
-            <link rel="stylesheet" href="/css/styles.css">  
-            <script src="../public/js/form.js"></script>
-           <link rel="stylesheet" href="/css/form.css" > 
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<!--++++++++++++++++++++++ Drop Down menu bar++++++++++++++++++-->
-<body>
-  <header>
+<!--+++++++++++++++++++++++++++++++++++++++++++++++++++ Drop Down menu bar++++++++++++++++++-->
+
     <h1 class="display-3 text-center my-4">About Us</h1>
     <div class="container">
       <div class="row">
@@ -80,7 +88,8 @@
                        
                       
            </style>
-
+</header>
+<!--++++++++++++++++++++++++++++++++++++++++++++++++++++ container ++++++++++++++++++++++++++++++++++-->
      <div class="container">   
       <div class="row"
       <div class="col"
@@ -126,7 +135,7 @@
 
         <br>
         <br>
-                         
+     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ form ++++++++++++++++++++++++++++++++++++++-->                    
          <div class="row">
 
             <div class="col-md-8 col-md-offset-3" id="form_container">
